--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
             "email": "saleemayoub1@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {},
     "extra": {
         "laravel": {
