--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "php": "^8.1"
+    },
     "extra": {
         "laravel": {
             "providers": [
